# sts-editor

./: Cargo.toml  IRONCLAD.autosave  WATCHER.autosave
src/: game_type.rs  main.rs  xor.rs
src/sts_core/: game_type.rs  mod.rs
