[package]
name = "sts-editor"
version = "0.1.0"
authors = ["kotokz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
base64 = "0.11.0"
serde_json = "1.0"
anyhow = "1.0"
serde_derive = "1.0"
glob = "*"